diesel_compile_tests/tests/fail/subselect_requires_correct_type.stderr
error[E0277]: the trait bound `SelectStatement<FromClause<table>, ..., ..., ...>: AsInExpression<...>` is not satisfied
   --> tests/fail/subselect_requires_correct_type.rs:22:59
    |
 LL |     let query = posts::table.filter(posts::user_id.eq_any(subquery));
    |                                                    ------ ^^^^^^^^ unsatisfied trait bound
    |                                                    |
    |                                                    required by a bound introduced by this call
    |
    = help: the trait `AsInExpression<diesel::sql_types::Integer>` is not implemented for `SelectStatement<FromClause<table>, DefaultSelectClause<...>, ..., ...>`
            but trait `AsInExpression<(diesel::sql_types::Integer, diesel::sql_types::Text)>` is implemented for it
    = help: for that trait implementation, expected `(diesel::sql_types::Integer, diesel::sql_types::Text)`, found `diesel::sql_types::Integer`
note: required by a bound in `eq_any`
   --> DIESEL/diesel/diesel/src/expression_methods/global_expression_methods.rs
    |
LL |     fn eq_any<T>(self, values: T) -> dsl::EqAny<Self, T>
    |        ------ required by a bound in this associated function
...
LL |         T: AsInExpression<Self::SqlType>,
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ExpressionMethods::eq_any`
 
    For more information about this error, try `rustc --explain E0277`.
